--- a/src/index.css
+++ b/src/index.css
@@ -883,7 +883,7 @@ a.full-button {
   background: transparent;
   margin-bottom: 0.5rem;
   font-size: 1rem;
-  width: 100%;
+  width: auto;
   max-width: 100%;
   line-height: 1;
 }
