--- a/src/pwsm.css
+++ b/src/pwsm.css
@@ -10,7 +10,15 @@
     margin-left: 0px;
 }
 
+.container {
+    min-width: 1000px;
+    padding: 0px;
 
+}
+
+.flex-row {
+    margin: 0px;
+}
 
 .table-container{
     position: relative;
@@ -52,6 +60,17 @@
     font-weight: 600;
 }
 
+#codeColor {
+    background-color: #ffff99;
+    border-radius: 10px;
+    padding: 10px;
+    width: 160px;
+}
+
+#codeSelect {
+    width: 350px;
+}
+
 body {
     background-color: #ffffee;
 }
@@ -64,6 +83,10 @@ select {
     border: 1px solid black;
     background-color: #fff;
 }
+
+
+
+
 
 [type='number'], [type='date'] {
     border: 1px solid black;
@@ -132,12 +155,16 @@ fieldset {
     border: 1px solid #333;
 }
 
-.plantBG:active {
+.plantBG:active, .wasteBG:active, .solutionBG:active, .mediaBG:active {
     background-color: white;
 }
 
 .plantBG:hover, .wasteBG:hover, .solutionBG:hover, .mediaBG:hover, .reportTypeBG:hover,
 .duplicate:hover, .delete:hover {
+    border: 3px solid #333;
+}
+
+input:focus {
     border: 3px solid #333;
 }
 
@@ -164,6 +191,7 @@ fieldset {
 
 [type='radio'] {
     appearance: none;
+    margin-left: 10px;
 }
 
 /* Colors from w3.css. Thank you W3! */
