--- a/src/pwsm.css
+++ b/src/pwsm.css
@@ -21,10 +21,6 @@ input:focus {
     border: 3px solid #333;
 }
 
-label {
-
-}
-
 select {
     border: 1px solid black;
     background-color: #fff;
@@ -147,12 +143,12 @@ select {
 .worklist-test-row {
     background-color: #e8e8e8;
     font-weight: bold;
-    display: none;
+    display: table-row;
 
 }
 
 .worklist-sample-row {
-    display: none;
+    display: table-row;
 }
 
 .plantBG {
@@ -302,7 +298,7 @@ select {
 {color:#000;background-color:#E6AF91}
 .w3-2020-magenta-purple
 {color:#fff;background-color:#6C244C}
-.w3-amber,
+.w3-amber
 {color:#000;background-color:#ffc107}
 
 .w3-flat-turquoise
